# xau_usd_streamlit

./: .gitignore  LICENSE  compose.yml  pyproject.toml
documents/data/parquet/: XAU_1d_data.parquet  XAU_1h_data.parquet  XAU_4h_data.parquet
documents/data/raw/: XAU_4h_data.csv
documents/notebooks/: 01_download_raw.ipynb  02_clean_to_parquet.ipynb  03_eda_silver.ipynb  03_upload_parquet_to_minio.ipynb  04_gold_features.ipynb
src/: main.py
