[tool.poetry]
name = "xau-usd-streamlit"
version = "0.1.0"
description = ""
authors = ["Augusto César"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
jupyterlab = "^4.5.0"
streamlit = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
