[tool.poetry]
name = "xau-usd-streamlit"
version = "0.1.0"
description = ""
authors = ["Augusto César"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
jupyterlab = "^4.5.0"
streamlit = "^1.51.0"
minio = "^7.2.18"
duckdb = "^1.4.2"


[tool.poetry.group.dev.dependencies]
kagglehub = "^0.3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
